--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "Burger",
+  "name": "Eat-Da-Burger",
   "version": "1.0.0",
   "description": "My Burger App, Input order to output complete.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    
   },
   "repository": {
     "type": "git",
