--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "Eat-Da-Burger",
+  "name": "burger",
   "version": "1.0.0",
   "description": "My Burger App, Input order to output complete.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "node server.js"
     
   },
   "repository": {
