--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My Burger App, Input order to output complete.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit status 1",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
